--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,58 @@
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: black;
+body {
+  padding: 0;
+  margin: 0;
+  background-color: black;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+}
+
+#game-container {
+  width: 100%;
+  height: 66.67vh; /* 2/3 of viewport height */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#game {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+#ui {
+  width: 100%;
+  height: 33.33vh; /* 1/3 of viewport height */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  .one {
+    width: 25%;
+    height: 100%;
+    background-color: lightcoral;
+    opacity: 0.1;
+  }
+  .two {
+    width: 25%;
+    height: 100%;
+    background-color: lightgreen;
+    opacity: 0.1;
+  }
+  .three {
+    width: 25%;
+    height: 100%;
+    background-color: lightskyblue;
+    opacity: 0.1;
+  }
+  .four {
+    width: 25%;
+    height: 100%;
+    background-color: lightyellow;
+    opacity: 0.1;
   }
 }
