--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: black;
+  background-color: #111;
 }
 
 main {
@@ -31,6 +31,7 @@ main {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  background-color: black;
   .one {
     width: 25%;
     height: 100%;
