--- a/src/style.css
+++ b/src/style.css
@@ -11,48 +11,52 @@ main {
   height: 100vh;
 }
 
+#game {
+  width: 80%;
+  height: 100%;
+}
+
+#left-ui {
+  width: 25%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  .one {
+    width: 100%;
+    height: 50%;
+    background-color: lightcoral;
+    opacity: 0.1;
+  }
+  .three {
+    width: 100%;
+    height: 50%;
+    background-color: lightskyblue;
+    opacity: 0.1;
+  }
+}
+
 #game-container {
   width: 100%;
-  height: 66.67vh; /* 2/3 of viewport height */
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-#game {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-#ui {
-  width: 100%;
-  height: 33.33vh; /* 1/3 of viewport height */
+#right-ui {
+  width: 25%;
+  height: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  background-color: black;
-  .one {
-    width: 25%;
-    height: 100%;
-    background-color: lightcoral;
-    opacity: 0.1;
-  }
+  flex-direction: column;
   .two {
-    width: 25%;
-    height: 100%;
+    width: 100%;
+    height: 50%;
     background-color: lightgreen;
     opacity: 0.1;
   }
-  .three {
-    width: 25%;
-    height: 100%;
-    background-color: lightskyblue;
-    opacity: 0.1;
-  }
   .four {
-    width: 25%;
-    height: 100%;
+    width: 100%;
+    height: 50%;
     background-color: lightyellow;
     opacity: 0.1;
   }
