--- a/src/style.css
+++ b/src/style.css
@@ -22,12 +22,20 @@ main {
   display: flex;
   flex-direction: column;
   .one {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
     width: 100%;
     height: 50%;
     background-color: lightcoral;
     opacity: 0.1;
   }
   .three {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
     width: 100%;
     height: 50%;
     background-color: lightskyblue;
@@ -49,12 +57,20 @@ main {
   display: flex;
   flex-direction: column;
   .two {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
     width: 100%;
     height: 50%;
     background-color: lightgreen;
     opacity: 0.1;
   }
   .four {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
     width: 100%;
     height: 50%;
     background-color: lightyellow;
