--- a/src/style.css
+++ b/src/style.css
@@ -77,3 +77,20 @@ main {
     opacity: 0.1;
   }
 }
+
+#health-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  font-size: 50px;
+
+  #health-bar-inner {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
