--- a/src/style.css
+++ b/src/style.css
@@ -85,7 +85,7 @@ main {
   width: 100%;
   height: 100px;
   font-size: 50px;
-
+  pointer-events: none;
   #health-bar-inner {
     width: 100%;
     height: 100%;
@@ -106,4 +106,5 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  pointer-events: none;
 }
