--- a/src/style.css
+++ b/src/style.css
@@ -155,3 +155,15 @@ main {
   pointer-events: none;
   z-index: 10;
 }
+
+#helper-text {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: white;
+  font-size: 28px;
+  text-align: center;
+  pointer-events: none;
+  z-index: 10;
+}
